Archive2/c8/56810d891d9a06/output
main.cpp:26:17: error: 'array' is not a member of 'std'
     std::vector<std::array<unsigned int, 13>> ScoreTable;
                 ^
main.cpp:26:17: error: 'array' is not a member of 'std'
main.cpp:26:44: error: template argument 1 is invalid
     std::vector<std::array<unsigned int, 13>> ScoreTable;
                                            ^
main.cpp:26:44: error: template argument 2 is invalid
main.cpp: In constructor 'LinearScanner::LinearScanner()':
main.cpp:34:30: error: 'array' is not a member of 'std'
     ScoreTable = std::vector<std::array<unsigned int, 13>>(_imageWidth, {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0});
                              ^
main.cpp:34:30: error: 'array' is not a member of 'std'
main.cpp:34:57: error: template argument 1 is invalid
     ScoreTable = std::vector<std::array<unsigned int, 13>>(_imageWidth, {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0});
                                                         ^
main.cpp:34:57: error: template argument 2 is invalid
main.cpp: At global scope:
main.cpp:35:2: warning: extra ';' [-Wpedantic]
 };
  ^
